--- a/Code/index.html
+++ b/Code/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 </head>
 
 <body>
@@ -35,9 +36,30 @@
                 <form>
                   <div class="form-group">
                     <ul class="list-group" id="filters">
+                      <!-- Date SearchBox -->
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                      </li>
+                      <!-- City SearchBox -->
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a City</label>
+                        <input class="form-control" id="cityname" type="text" placeholder="Fresno">
+                      </li>
+                      <!-- State SearchBox -->
+                      <li class="filter list-group-item">
+                        <label for="statename">Enter a State</label>
+                        <input class="form-control" id="state" type="text" placeholder="Fl">
+                      </li>
+                      <!-- Country SearchBox -->
+                      <li class="filter list-group-item">
+                        <label for="countryname">Enter a Country</label>
+                        <input class="form-control" id="country" type="text" placeholder="US">
+                      </li>
+                      <!-- Shape SearchBox -->
+                      <li class="filter list-group-item">
+                        <label for="shapename">Enter a Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="rectangle">
                       </li>
                     </ul>
                   </div>
@@ -62,7 +84,7 @@
                 </tr>
                 
               </thead>
-              <tbody></tbody>
+              <tbody id= "tb"></tbody>
             </table>
           </div>
         </div>
