done with Bonus

--- a/Code/index.html
+++ b/Code/index.html
@@ -59,7 +59,7 @@
                       <!-- Shape SearchBox -->
                       <li class="filter list-group-item">
                         <label for="shapename">Enter a Shape</label>
-                        <input class="form-control" id="shape" type="text" placeholder="rectangle">
+                        <input class="form-control" id="shape" type="text" placeholder="Rectangle">
                       </li>
                     </ul>
                   </div>
